[package]
name = "sonar"
version = "0.1.0"
authors = ["Kim Thompson <kim.thompson.dev@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sonar"
path = "src/main.rs"

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
colored = "2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
